--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,16 +19,6 @@ $edit-btn-width: calc(162px + 20px); // width plus padding
   font-family: "Raleway", sans-serif;
 }
 
-.year {
-  width: 34%;
-  text-align: right;
-  padding: 50px 0 0 20px;
-  @media (max-width: $break-mobile) {
-    text-align: left;
-    width: 100%;
-  }
-}
-
 .title-wrap {
   display: flex;
   padding: 50px 0 0 20px;
@@ -56,9 +46,25 @@ $edit-btn-width: calc(162px + 20px); // width plus padding
   }
 }
 
+.year-wrap {
+  box-shadow: 0px -4px 12px 9px #fff;
+  @media (max-width: $break-mobile) {
+    background: #fff;
+    z-index: 1;
+  }
+}
+
 .year {
+  background: #fff;
+  z-index: 1;
   font-size: 36px;
   font-weight: 300;
+  width: 34%;
+  text-align: left;
+  padding: 50px 0 0 20px;
+  @media (max-width: $break-mobile) {
+    width: 100%;
+  }
 }
 
 .hide {
