--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -11,9 +11,10 @@
       height: 100vh;
       width: 100vw;
       position: fixed;
-      background: #00000017;
+      background: $overlay;
       top: 0;
       left: 0;
+      z-index: 2;
     }
 
     .modal {
@@ -81,6 +82,25 @@
       position: absolute;
       top: 15px;
       right: 25px;
+      z-index: 3;
+
+      @media (max-width: $break-mobile) {
+        position: fixed;
+      }
+
+      &:before {
+        content: "";
+        background: #fff;
+        width: 46px;
+        height: 46px;
+        border-radius: 49px;
+        top: -10px;
+        left: -12px;
+        opacity: 1;
+        position: absolute;
+        transition: 0.2s all;
+        z-index: -1;
+      }
     }
 
     .filter-header {
@@ -88,7 +108,7 @@
         display: inline-block;
       }
       .check-all {
-        color: $checkbox;
+        color: $action-color-dark;
         padding: 20px;
         margin: 0 0;
         cursor: pointer;
