--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,10 +36,13 @@ body {
 
   @media (max-width: $break-mobile) {
     margin-top: 0;
+    align-items: center;
   }
 }
 
 .title {
+  display: flex;
+  align-items: center;
   font-size: 42px;
   margin: 0 0;
   flex-grow: 1;
@@ -82,17 +85,35 @@ body {
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
 
-  .mobile {
+  .logo {
     display: none;
+    margin-right: 10px;
   }
+
   @media (max-width: $break-mobile) {
-    .mobile {
-      display: inline-block;
+    font-size: 15px;
+    line-height: 1;
+
+    .text {
+      max-width: 60px;
     }
-    .desktop {
-      display: none;
+
+    .logo {
+      display: flex;
     }
   }
+}
+
+.logo {
+  width: 40px;
+  height: 40px;
+  margin-left: 2px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn-wrap {
