--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -101,19 +101,26 @@ body {
 }
 
 .logo {
+  display: flex;
   width: 40px;
   height: 40px;
-  margin-left: 2px;
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 10px;
-  display: none;
+  margin-left: 2px;
+  margin-right: 15px;
+  margin-top: -10px;
+  -moz-transform: scale(-1, 1);
+  -webkit-transform: scale(-1, 1);
+  -o-transform: scale(-1, 1);
+  -ms-transform: scale(-1, 1);
+  transform: scale(-1, 1);
   @media (max-width: $break-mobile) {
-    display: flex;
+    margin-top: 0;
+    margin-right: 10px;
   }
 }
 
