--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -46,7 +46,8 @@ body {
   flex-grow: 1;
 }
 
-.title {
+.title,
+.logo-emoji {
   display: inline-block;
   font-size: 42px;
   margin: 0 0;
@@ -92,7 +93,9 @@ body {
   -moz-text-fill-color: transparent;
   -ms-text-fill-color: transparent;
   -o-text-fill-color: transparent;
+}
 
+.title {
   @media (max-width: $break-mobile) {
     font-size: 15px;
     line-height: 1;
@@ -100,27 +103,18 @@ body {
   }
 }
 
-.logo {
-  display: flex;
-  width: 40px;
-  height: 40px;
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 2px;
-  margin-right: 15px;
-  margin-top: -10px;
+.logo-emoji {
   -moz-transform: scale(-1, 1);
   -webkit-transform: scale(-1, 1);
   -o-transform: scale(-1, 1);
   -ms-transform: scale(-1, 1);
   transform: scale(-1, 1);
+  margin-right: 15px;
+  margin-left: 3px;
+
   @media (max-width: $break-mobile) {
-    margin-top: 0;
     margin-right: 10px;
+    margin-bottom: -9px;
   }
 }
 
