--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,7 +32,7 @@ body {
   margin-bottom: 20px;
   margin-top: 40px;
   background: #fff;
-  z-index: 2;
+  z-index: 3;
 
   @media (max-width: $break-mobile) {
     margin-top: 0;
@@ -214,6 +214,8 @@ body {
 
 .year-wrap {
   box-shadow: 0px -4px 10px 2px #fff;
+  -webkit-box-shadow: 0px -4px 10px 2px #fff;
+  -moz-box-shadow: 0px -4px 10px 2px #fff;
   @media (max-width: $break-mobile) {
     background: #fff;
     z-index: 2;
