--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -377,6 +377,7 @@ body {
   color: $dark-text;
   letter-spacing: 0.1px;
   z-index: 1;
+  padding-top: 3px;
 
   &:after {
     content: "";
@@ -387,8 +388,7 @@ body {
     top: 10px;
     right: 0;
     z-index: -1;
-
-    top: 6px;
+    top: 9px;
   }
 
   @media (max-width: $break-mobile) {
